--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -12,7 +12,7 @@
     <span> <!-- LOGO --></span>
     <input data-bind="textInput: searchInput"/>
     <button data-bind="click: searchBtn">Search</button>
-<select data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genres:'" size="20" multiple="true"></select>
+<select data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
 <div data-bind="visible: selectedGenre"></div>
     
     <nav>
