--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 
-<>
+
     
     <span> <!-- LOGO --></span>
     <input data-bind="textInput: searchInput"/>
     <button data-bind="click: searchBtn">Search</button>
 <select data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
+    <button data-bind="click: advSearchBtn">Advanced search</button>
 <div data-bind="visible: selectedGenre"></div>
     
     <nav>
