--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -9,7 +9,7 @@
 
 
     
-    <span> <!-- LOGO --></span>
+    <span>   <img src="resources/logo_black.svg"> </span>
     <input data-bind="textInput: searchInput"/>
     <button data-bind="click: searchBtn">Search</button>
 <select data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
