Dev, css and body rules

--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -6,9 +6,7 @@
 
 </head>
 <body>
-
-
-    
+ <header>
     <span>   <img src="resources/logo_black.svg"> </span>
     <input data-bind="textInput: searchInput"/>
     <button data-bind="click: searchBtn">Search</button>
@@ -19,10 +17,10 @@
     <nav>
         <ul>
             <li>
-                <a>About us</a>
+                <a>About us |</a>
             </li>
             <li>
-                <a>Register</a>
+                <a>Register |</a>
             </li>
             <li>
                 <a>Login</a>
