--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -14,8 +14,7 @@
 <select data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
     <button data-bind="click: advSearchBtn">Advanced search</button>
 <div data-bind="visible: selectedGenre"></div>
-     <button data-bind="click: loginBtn">Login</button>
-     <div data-bind="component:{name:login}"></div>
+
      
     
     <nav>
@@ -36,9 +35,9 @@
 </header>
 
 <h1>Example</h1>
-
-
-
+ 
+ <title-list></title-list>
+ <title-details params="tconst: 'tt0052520'"></title-details>
 
 <script data-main="js/main.js" src="js/lib/require.js/require.js"></script>
 </body>
