--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -11,7 +11,7 @@
 
 <body>
  <header>
-    <span>   <img src="resources/logo_black.svg"> </span>
+    <span>   <img class="logo" src="resources/logo_black.svg"> </span>
     <input data-bind="textInput: searchInput"/>
     <button data-bind="click: searchBtn">Search</button>
 <select class="extras" data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
