--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
     <title>index</title>
-
     <link rel="stylesheet" href="js/lib/twitter-bootstrap/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet" />
-   
-
 </head>
 
 <body>
  <header>
     <span>   <img class="logo" src="resources/logo_black.svg"> </span>
-    <input data-bind="textInput: searchInput"/>
+    <input data-bind="textInput: searchInput" placeholder="Search..." aria-label="Search..."/>
     <button data-bind="click: searchBtn">Search</button>
 <select class="extras" data-bind="options: genres, optionsText: 'genre', value: selectedGenre, optionsCaption: 'Genre'" ></select>
     <button data-bind="click: advSearchBtn">Advanced search</button>
