fix bug for showing user and login components

--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -47,9 +47,11 @@
  </div>
  
  
- 
+ <user></user>
+ <login></login>
  <title-list></title-list>
  <title-details params="tconst: 'tt0052520'"></title-details>
+ 
  
  
 
