--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -22,18 +22,16 @@
             <input data-bind="value: searchInput" class="form-control mr-sm-2" type="text" placeholder="Search"
                    aria-label="Search...">
             <button data-bind="click:searchBtn" class="btn btn-secondary my-2 my-sm-0" type="submit"
-                    data-toggle="button" aria-pressed="false" autocomplete="off">Search
-            </button>
+                    data-toggle="button" aria-pressed="false" autocomplete="off">Search</button>
         </form>
         <ul class="navbar-nav form-inline ml-auto">
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <button data-bind="click:advSearchBtn" type="button" class="btn btn-primary disabled"
-                        data-toggle="button" aria-pressed="false">Advanced search
-                </button>
-            </li>
+                        data-toggle="button" aria-pressed="false">Advanced search</button>
+            </li>-->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                   aria-expanded="true">Dropdown</a>
+                   aria-expanded="true">Genres</a>
                 <ul class="dropdown-menu" data-bind="foreach: genresList">
                     <li data-bind="css: $parent.isActiveDrop($data)">
                         <a class="dropdown-item" data-bind="click: $parent.changeContent">
