--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -5,6 +5,7 @@
     <!--<link rel="stylesheet" href="js/lib/twitter-bootstrap/css/bootstrap.min.css">-->
     <!--<link href="css/style.css" rel="stylesheet" />-->
     <link rel="stylesheet" href="js/lib/twitter-bootstrap/css/bootstrap-lux.min.css">
+    <link href="css/style.css" rel="stylesheet" />
     <link rel="icon" href="resources/logo_whiteonblack.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
