--- a/Portfolio-2/WebService/wwwroot/index.html
+++ b/Portfolio-2/WebService/wwwroot/index.html
@@ -19,11 +19,13 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
-        <form class="form-inline my-2 my-lg-0" data-children-count="1">
+        <form role="form" data-toggle="validator" class="form-inline my-2 my-lg-0" data-children-count="1">
+            <div class="form-group">
             <input data-bind="value: searchInput" class="form-control mr-sm-2" type="text" placeholder="Search"
-                   aria-label="Search...">
+                   aria-label="Search..." data-error="You must have a name" required>
             <button data-bind="click:searchBtn" class="btn btn-secondary my-2 my-sm-0" type="submit"
                     data-toggle="button" aria-pressed="false" autocomplete="off">Search</button>
+            </div>
         </form>
         <ul class="navbar-nav form-inline ml-auto">
             <!--<li class="nav-item">
